# libcpolars

./: .gitignore  Cargo.toml  Makefile  README.md  cbindgen.toml
src/: common.rs  dataframe.rs  expr.rs  lazyframe.rs  lib.rs  series.rs
src/reader/: mod.rs
